log

Wed 13 Mar 2024 08:32:36 PM UTC: 
 tests:  0|7
total_score: 0/70
fd3e55c
Wed 13 Mar 2024 08:36:04 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:34: error: expected statement before ‘)’ token
   17 |       if(arr[i] >= elementoMayor))
      |                                  ^
Compilation failed
5bbab5c
Wed 13 Mar 2024 08:36:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:34: error: expected statement before ‘)’ token
   17 |       if(arr[i] >= elementoMayor))
      |                                  ^
Compilation failed
6e8e14d
Wed 13 Mar 2024 08:36:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:34: error: expected statement before ‘)’ token
   17 |       if(arr[i] >= elementoMayor))
      |                                  ^
Compilation failed
afd9314
Wed 13 Mar 2024 08:37:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:17:34: error: expected statement before ‘)’ token
   17 |       if(arr[i] >= elementoMayor))
      |                                  ^
Compilation failed
930da07
Wed 13 Mar 2024 08:38:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
29cb236
Wed 13 Mar 2024 08:38:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
936dbac
Wed 13 Mar 2024 08:41:04 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:14:31: error: expected statement before ‘)’ token
   14 |   if(arr == NULL || size <= 0))
      |                               ^
Compilation failed
79d4842
Wed 13 Mar 2024 08:41:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f08054a
Wed 13 Mar 2024 08:43:10 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 10/70
a384e05
Wed 13 Mar 2024 08:50:14 PM UTC: 
 exercises.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  0|6
total_score: 10/70
d1b8f1b
